--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,7 @@ body {
   height: 100vh;
   max-height: 100vh;
   overflow-y: hidden;
+  
   /* background: linear-gradient(
       to bottom,
       transparent,
@@ -50,8 +51,9 @@ body {
     )
     rgb(var(--background-start-rgb)); */
     /* background: rgba(7, 101, 114, 0.667); */
-    background: linear-gradient(to bottom right, #36C7E7, #1A5DC2);
-
+    /* background: linear-gradient(to bottom right, #36C7E7, #1A5DC2); */
+    background-image: url("/assets/landscape.jpg");
+    background-size: cover;
 }
 
 @layer utilities {
