--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,7 +52,7 @@ body {
     rgb(var(--background-start-rgb)); */
     /* background: rgba(7, 101, 114, 0.667); */
     /* background: linear-gradient(to bottom right, #36C7E7, #1A5DC2); */
-    background-image: url("/assets/landscape.jpg");
+    background-image: url("/assets/mystical.jpg");
     background-size: cover;
 }
 
