--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,50 +1,53 @@
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+* {
+  font-family: "Poppins", sans-serif;
+}
+
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+    --foreground-rgb: 0, 0, 0;
+    --background-start-rgb: 214, 219, 220;
+    --background-end-rgb: 255, 255, 255;
+    
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+    :root {
+        --foreground-rgb: 255, 255, 255;
+        --background-start-rgb: 0, 0, 0;
+        --background-end-rgb: 0, 0, 0;
+    }
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+    width: 10px;
 }
 
 ::-webkit-scrollbar-track {
-
-  background: transparent;
-
+    background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #222222;
-  border-radius: 50px;
+    background: #222222;
+    border-radius: 50px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-
-  background: #000000;
+    background: #000000;
 }
 
-
 body {
-  color: rgb(var(--foreground-rgb));
-  height: 100vh;
-  max-height: 100vh;
-  overflow-y: hidden;
-  
-  /* background: linear-gradient(
+    color: rgb(var(--foreground-rgb));
+    height: 100vh;
+    max-height: 100vh;
+    overflow-y: hidden;
+    
+
+    /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
@@ -57,7 +60,7 @@ body {
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+    .text-balance {
+        text-wrap: balance;
+    }
 }
