--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,7 +24,7 @@
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 8px;
 }
 
 ::-webkit-scrollbar-track {
@@ -32,12 +32,12 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #222222;
+    background: #07a047;
     border-radius: 50px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #000000;
+    background: #589c0b;
 }
 
 body {
@@ -45,16 +45,7 @@ body {
     height: 100vh;
     max-height: 100vh;
     overflow-y: hidden;
-    
 
-    /* background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb)); */
-    /* background: rgba(7, 101, 114, 0.667); */
-    /* background: linear-gradient(to bottom right, #36C7E7, #1A5DC2); */
     background-image: url("/assets/mystical.jpg");
     background-size: cover;
 }
