--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,7 +24,7 @@
 }
 
 ::-webkit-scrollbar {
-    width: 8px;
+    width: 6px;
 }
 
 ::-webkit-scrollbar-track {
@@ -45,8 +45,7 @@ body {
     height: 100vh;
     max-height: 100vh;
     overflow-y: hidden;
-
-    background-image: url("/assets/mystical.jpg");
+    /* background-image: url("/assets/mystical.jpg"); */
     background-size: cover;
 }
 
